[package]
name = "dycon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = "3.5.2"
fuser = "0.17.0"
globset = "0.4.18"
libc = "0.2.180"
nix = { version = "0.31", features = ["fs", "dir"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
